began optimisation of MyGameStateFactory